V1.9.0 增加了系列筛选功能，增加了一部分刻印的系列 修复了如偃月之云等双攻均为0的刻印无法显示的问题 更改图片为缩略图，增添了几个刻印数据